appId: host.exp.exponent
---
- launchApp
- openLink: 'exp://10.0.2.2:8081'
- assertVisible: 'SGW'
- tapOn:
    point: '70%,80%'
- extendedWaitUntil:
    visible: 'Grey Nuns Garden'
    timeout: 2000
- swipe:
    from:
      text: 'Grey Nuns Building'
    direction: DOWN
- tapOn: 'SGW'
