appId: host.exp.exponent
---
- launchApp
- openLink: 'exp://10.0.2.2:8081'
- assertVisible: 'SGW'
- tapOn: 'SGW'
- assertVisible: 'LOY'
