appId: host.exp.exponent
---
- launchApp
- openLink: 'exp://10.0.2.2:8081'
- assertVisible: 'SGW'
- tapOn:
    point: '70%,80%'
- tapOn: ' Set as starting point '
- tapOn: 'Set destination'
- tapOn: 'Search buildings...'
- inputText: 'Henry F. Hall Building'
- doubleTapOn: '(H) 1455 DeMaisonneuve W'
- assertVisible: 'Henry F. Hall Building'
